# hackusf-test

./: .env.example  .gitignore  CONTRIBUTING.md  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: tool-researcher.md
.claude/commands/: checkpoint.md  hack.md
.claude/skills/google-a2a/: SKILL.md
.claude/skills/google-adk/: SKILL.md
.claude/skills/hackathon-rules/: SKILL.md
.claude/skills/hackathon-sdlc/: SKILL.md
.claude/skills/team-routing/: SKILL.md
agents/code_compliance/: agent.py
agents/hardening_advisor/: agent.py
agents/orchestrator/: agent.py
agents/risk_assessment/: agent.py
docs/plans/: 2026-03-24-2300-architecture.md  2026-03-24-2330-feature-zero.md
docs/tools/google-a2a/: README.md  research-report.md
docs/tools/google-adk/: README.md  research-report.md
scripts/: deploy.sh  dev.sh  run-a2a.sh  verify-agents.sh
test/: test_feature_zero.py  test_smoke.py
